Change of some test. Unhaandeld Exceptions and Date Problems