@@ -20,6 +20,7 @@ import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.concurrent.atomic.AtomicReference;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -156,8 +157,9 @@ class TaskServiceTest {
     void editTAsk_shouldReturnTaskTableReturnDTO_whenTaskIsEdited() {
         EditTaskDTO editTaskDTO = new EditTaskDTO(Status.IN_PROGRESS,null);
         String id = "Unique1";
+        LocalDate testDate = LocalDate.of(2025, 10, 30);
         List<Task> taskList = new ArrayList<>();
-        taskList.add(new Task(id + "1",Status.OPEN,LocalDate.now()));
+        taskList.add(new Task(id + "1",Status.OPEN, testDate));
 
         TaskSeries savedTaskSeries = new TaskSeries(
                 id,
@@ -180,15 +182,15 @@ class TaskServiceTest {
                 new ArrayList<>(),
                 Priority.HIGH,
                 Status.IN_PROGRESS,
-                LocalDate.now(),
+                testDate,
                 1,
-                "null"
+                "home123"
         );
 
         when(mockRepo.findById(id)).thenReturn(Optional.of(savedTaskSeries));
         when(mockRepo.save(Mockito.any(TaskSeries.class))).thenAnswer(invocation -> invocation.getArgument(0));
-        when(idService.createNewId()).thenReturn(id);
-        when(taskMapper.mapToTaskTableReturn(savedTaskSeries)).thenReturn(expectedReturn);
+        when(homeService.getHomeWithConnectedTask(Mockito.any(TaskSeries.class))).thenReturn("home123");
+        when(taskMapper.mapToTaskTableReturn(Mockito.any(TaskSeries.class))).thenReturn(expectedReturn);
 
 
         //WHEN
@@ -202,21 +204,21 @@ class TaskServiceTest {
     }
     @Test
     void editTask_shouldThrowTaskDoesNotExistException_whenTaskDoesNotExist() {
-        try{
-            String id = "Unique1";
-            when(mockRepo.findById(id)).thenReturn(Optional.empty());
-            taskService.editTask(id,new EditTaskDTO(Status.IN_PROGRESS,null));
-        }catch(TaskDoesNotExistException e){
-            assertEquals("Task does not Exist",e.getMessage());
+        // GIVEN
+        String id = "non-existent-id";
+        when(mockRepo.findById(id)).thenReturn(Optional.empty());
+        EditTaskDTO editDto = new EditTaskDTO(Status.IN_PROGRESS, null);
 
-        }
+        // WHEN & THEN
+        TaskDoesNotExistException exception = assertThrows(TaskDoesNotExistException.class, () -> taskService.editTask(id, editDto));
+        assertEquals("Task does not Exist", exception.getMessage());
     }
 
     @Test
     void editTask_shouldThrowException_whenTaskDueDateIsInTheFuture() {
         String id = "Unique1";
         List<Task> taskList = new ArrayList<>();
-        taskList.add(new Task(id + "1",Status.CLOSED,LocalDate.now()));
+        taskList.add(new Task(id + "1",Status.CLOSED, LocalDate.of(2025, 10, 30)));
 
         TaskSeries savedTaskSeries = new TaskSeries(
                 id,
@@ -231,20 +233,20 @@ class TaskServiceTest {
                 taskList
         );
         when(mockRepo.findById(id)).thenReturn(Optional.of(savedTaskSeries));
-        try{
-            EditTaskDTO editTaskDTO = new EditTaskDTO(Status.CLOSED,LocalDate.now().plusDays(5));
-            taskService.editTask(id,editTaskDTO);
-        }catch (TaskCompletionException e){
-            assertEquals("Completion Date can not be in the future",e.getMessage());
-        }
+        EditTaskDTO editTaskDTO = new EditTaskDTO(Status.CLOSED,LocalDate.now().plusDays(5));
+
+        // WHEN & THEN
+        TaskCompletionException exception = assertThrows(TaskCompletionException.class, () -> taskService.editTask(id, editTaskDTO));
+        assertEquals("Completion Date can not be in the future", exception.getMessage());
     }
 
     @Test
     void editTAsk_shouldReturnTaskTableReturnDTOWithNewTask_whenTaskIsCompleted() {
         EditTaskDTO editTaskDTO = new EditTaskDTO(Status.CLOSED,null);
         String id = "Unique1";
+        LocalDate testDate = LocalDate.of(2025, 10, 30);
         List<Task> taskList = new ArrayList<>();
-        taskList.add(new Task(id + "1",Status.OPEN,LocalDate.now()));
+        taskList.add(new Task(id + "1",Status.OPEN, testDate));
 
         TaskDefinition taskDefinition = new TaskDefinition(id + "_D",
                 "Test",
@@ -253,7 +255,7 @@ class TaskServiceTest {
                 new BigDecimal(2),
                 Priority.HIGH,
                 3);
-
+        
         TaskSeries savedTaskSeries = new TaskSeries(
                 id,
                 taskDefinition,
@@ -261,23 +263,23 @@ class TaskServiceTest {
         );
 
         TaskTableReturnDTO expectedReturn = new TaskTableReturnDTO(
-                id + "1",
+                id + "2", // ID of the new task
                 id,
                 "Test",
                 new ArrayList<>(),
                 new ArrayList<>(),
                 Priority.HIGH,
                 Status.OPEN,
-                LocalDate.now().plusDays(3)
+                LocalDate.now().plusDays(3) // The new due date
                 ,1,
-                "1"
+                "home123"
         );
-
+        
         when(mockRepo.findById(id)).thenReturn(Optional.of(savedTaskSeries));
         when(mockRepo.save(Mockito.any(TaskSeries.class))).thenAnswer(invocation -> invocation.getArgument(0));
-        when(idService.createNewId()).thenReturn(id);
-        when(taskMapper.mapToTaskTableReturn(savedTaskSeries)).thenReturn(expectedReturn);
-
+        when(idService.createNewId()).thenReturn(id + "2");
+        when(homeService.getHomeWithConnectedTask(Mockito.any(TaskSeries.class))).thenReturn("home123");
+        when(taskMapper.mapToTaskTableReturn(Mockito.any(TaskSeries.class))).thenReturn(expectedReturn);
 
         //WHEN
         TaskTableReturnDTO result = taskService.editTask(id,editTaskDTO);
@@ -286,16 +288,17 @@ class TaskServiceTest {
         Mockito.verify(mockRepo).findById(id);
         Mockito.verify(mockRepo).save(Mockito.any(TaskSeries.class));
         assertEquals(expectedReturn,result);
-        assertEquals(Status.CLOSED, savedTaskSeries.taskList().getFirst().status());
-
+        assertEquals(2, savedTaskSeries.taskList().size());
+        assertEquals(Status.CLOSED, savedTaskSeries.taskList().get(0).status());
     }
 
     @Test
     void editTask_shouldReturnTaskWithUpdatedDueDate_whenDueDateIsUpdated() {
-        EditTaskDTO editTaskDTO = new EditTaskDTO(Status.OPEN,LocalDate.now().plusDays(3));
+        LocalDate newDueDate = LocalDate.of(2025, 11, 2);
+        EditTaskDTO editTaskDTO = new EditTaskDTO(Status.OPEN, newDueDate);
         String id = "Unique1";
         List<Task> taskList = new ArrayList<>();
-        taskList.add(new Task(id + "1",Status.OPEN,LocalDate.now()));
+        taskList.add(new Task(id + "1",Status.OPEN, LocalDate.of(2025, 10, 30)));
 
         TaskDefinition taskDefinition = new TaskDefinition(
                 id + "_D",
@@ -320,24 +323,27 @@ class TaskServiceTest {
                 new ArrayList<>(),
                 Priority.HIGH,
                 Status.OPEN,
-                LocalDate.now().plusDays(3)
+                newDueDate
                 ,1,
-                "null"
+                "home123"
         );
 
+        AtomicReference<TaskSeries> saved = new AtomicReference<>();
         when(mockRepo.findById(id)).thenReturn(Optional.of(savedTaskSeries));
-        when(mockRepo.save(Mockito.any(TaskSeries.class))).thenAnswer(invocation -> invocation.getArgument(0));
-        when(idService.createNewId()).thenReturn(id);
-        when(taskMapper.mapToTaskTableReturn(savedTaskSeries)).thenReturn(expectedReturn);
+        when(mockRepo.save(Mockito.any(TaskSeries.class))).then(invocation -> {
+            saved.set(invocation.getArgument(0));
+            return saved.get();
+        });
+        when(homeService.getHomeWithConnectedTask(Mockito.any(TaskSeries.class))).thenReturn("home123");
+        when(taskMapper.mapToTaskTableReturn(Mockito.any(TaskSeries.class))).thenReturn(expectedReturn);
 
         //WHEN
         TaskTableReturnDTO result = taskService.editTask(id,editTaskDTO);
 
         //THEN
         Mockito.verify(mockRepo).findById(id);
-        Mockito.verify(mockRepo).save(Mockito.any(TaskSeries.class));
         assertEquals(expectedReturn,result);
-        assertEquals(LocalDate.now().plusDays(3), savedTaskSeries.taskList().getFirst().dueDate());
+        assertEquals(newDueDate, saved.get().taskList().getFirst().dueDate());
     }
 
     @Test
@@ -357,14 +363,12 @@ class TaskServiceTest {
 
     @Test
     void editTaskSeries_shouldThrowTaskDoesNotExistException_whenTaskDoesNotExist(){
-        try {
-            String id = "Unique1";
-            EditTaskSeriesDTO editTaskSeriesDTO = geneartateEditTaskSeriesDTO();
-            when(mockRepo.findById(id)).thenReturn(Optional.empty());
-            taskService.editTaskSeries(id,editTaskSeriesDTO);
-        }catch (TaskDoesNotExistException e){
-            assertEquals("Task does not Exist",e.getMessage());
-        }
+        // GIVEN
+        String id = "Unique1";
+        EditTaskSeriesDTO editTaskSeriesDTO = geneartateEditTaskSeriesDTO();
+        when(mockRepo.findById(id)).thenReturn(Optional.empty());
+        // WHEN & THEN
+        assertThrows(TaskDoesNotExistException.class, () -> taskService.editTaskSeries(id,editTaskSeriesDTO));
     }
 
     @Test
@@ -372,7 +376,7 @@ class TaskServiceTest {
         //GIVEN
         String id = "Unique1";
         List<Task> taskList = new ArrayList<>();
-        taskList.add(new Task(id + "1",Status.OPEN,LocalDate.now()));
+        taskList.add(new Task(id + "1",Status.OPEN, LocalDate.of(2025, 10, 30)));
 
         TaskDefinition taskDefinition = new TaskDefinition(
                 id + "_D",
@@ -453,7 +457,7 @@ class TaskServiceTest {
                 assignedUserIDs,
                 Priority.HIGH,
                 Status.OPEN,
-                LocalDate.now(),
+                LocalDate.of(2025, 10, 30),
                 4,
                 "UniqueHome"
         );
